--- a/Mapmaker/theme/templates/base.html
+++ b/Mapmaker/theme/templates/base.html
@@ -14,7 +14,7 @@
 		<!--Replace with your tailwind.css once created-->
 		{% tailwind_preload_css %}
     	{% tailwind_css %}
-		<!--<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>-->
+		<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
 		{% tailwind_css %}
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
 		<!-- Define your gradient here - use online tools to find a gradient matching your branding-->
