changed some logic for card placement

--- a/src/dashboard/templates/honeycomb_graph.html
+++ b/src/dashboard/templates/honeycomb_graph.html
@@ -58,21 +58,37 @@
             from: 0,
             to: 1,
             color: '#F9EDB3',
-            name: '< 1M'
+            name: 'Ambition'
         }, {
             from: 1,
             to: 2,
             color: '#FFC428',
-            name: '1M - 5M'
+            name: 'Challenge'
         }, {
             from: 2,
             to: 3,
             color: '#FF7987',
-            name: '5M - 20M'
+            name: 'Idea'
         }, {
             from: 3,
+            to: 4,
             color: '#FF2371',
-            name: '> 20M'
+            name: 'Pro'
+        }, {
+            from: 4,
+            to: 5,
+            color: '#FF2371',
+            name: 'Con'
+        }, {
+            from: 5,
+            to: 6,
+            color: '#DAF7A6',
+            name: 'Add'
+        }, {
+            from: 6,
+            to: 7,
+            color: '#C70039',
+            name: 'Remove'
         }]
     },
 
