--- a/src/dashboard/templates/network.html
+++ b/src/dashboard/templates/network.html
@@ -1,7 +1,7 @@
 <style type="text/css">
     .gridmain {
       display:flex;
-      --s: 200px;  /* size  */
+      --s: 100px;  /* size  */
       --m: 4px;    /* margin */
       --f: calc(1.732 * var(--s) + 4 * var(--m)  - 1px);
       padding-bottom: 50px;
@@ -18,7 +18,6 @@
       display: inline-block;
       font-size:initial;
       clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-      background: red;
       margin-bottom: calc(var(--m) - var(--s)*0.2885); 
     }
     /*
@@ -35,11 +34,17 @@
                        #0000 0 calc(var(--f) - 3px),      
                        #000  0 var(--f));
     }
-    .hexagon {
-        padding-top: 10%;
+    .hexagonhidden {
+        padding-top: 10px;
         text-align: center;
         vertical-align: middle;
-        line-height: 20px;
+        background: white;
+    }
+    .hexagon {
+        padding-top: 10px;
+        text-align: center;
+        vertical-align: middle;
+        background: green;
     }
 
 </style>
@@ -48,9 +53,34 @@
 <div class="gridmain">
         <form class="gridcontainer sortable" hx-post="/dashboard/update" hx-trigger="end">
         {% for card in cards %}
-            <div class="hexagon"><input type='hidden' name='item' value='{{ card.id}}'/>            
-                {{ card.title}}
+        {% if card.cardtype == 'empty' %}
+            <div class="hexagonhidden"><input type='hidden' name='item' value='{{ card.id}}'/>            
             </div>
+        {% elif card.cardtype == 'ambition' %}
+            <div class="hexagon" style="background: green;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+                {{ card.title}}
+                {{ card.cardtype }}
+                ambition
+            </div>
+        {% elif card.cardtype == 'challenge' %}
+        <div class="hexagon" style="background: red;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            {{ card.title}}
+            {{ card.cardtype }}
+            challenge
+        </div>
+        {% elif card.cardtype == 'idea' %}
+            <div class="hexagon" style="background: blue;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+                {{ card.title}}
+                {{ card.cardtype }}
+                idea
+            </div>
+        {% elif card.cardtype == 'pro' %}
+        <div class="hexagon" style="background: yellow;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            {{ card.title}}
+            {{ card.cardtype }}
+            pro
+        </div>
+        {% endif %}
         {% endfor %}
         </form>
     </div>
