fixed weird overflow issue

--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -12,9 +12,8 @@
       <span class="sr-only">Loading...</span>
   </div>
   </div>
-        {% include 'network.html' with cards=cards %}
-        {% include 'legend.html' %}
-
+<div class="h-[600px]" style="display: inline-block "></div>
+  {% include 'grid.html' with cards=cards %}
+</div>
 </main>
-{% include 'sidedrawer.html' %}
 {% endblock %}
