--- a/src/dashboard/templates/grid.html
+++ b/src/dashboard/templates/grid.html
@@ -83,7 +83,7 @@
                 {{ card.title}}
             </div>
         {% elif card.cardtype == 'pro' %}
-            <div class="hexagon" style="background: green;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-lightbulb fa-xl"></i><br>
                 {{ card.title}}
             </div>
