Added drawer element

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -34,12 +34,12 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="{% static '/images/favicons/favicon-32x32.png' %}">
 	<link rel="icon" type="image/png" sizes="96x96" href="{% static '/images/favicons/favicon-96x96.png' %}">
 	<link rel="icon" type="image/png" sizes="16x16" href="{% static '/images/favicons/favicon-16x16.png' %}">
-	<link rel="manifest" href="/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="{% static '/images/favicons/ms-icon-144x144.png' %}">
 	<meta name="theme-color" content="#ffffff">
 	<!--Flowbite CSS Components-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
 
 </head>
 <body class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
