--- a/src/dashboard/templates/grid.html
+++ b/src/dashboard/templates/grid.html
@@ -10,8 +10,8 @@
 
     .gridcontainer {
       font-size: 0; /*disable white space between inline block element */
-      width: 1530px; /* We need a fixed size so we know that the divs won't overflow*/
-      height: 750px; /* We need a fixed size so we know that the divs won't overflow*/
+      width: 1800px; /* We need a fixed size so we know that the divs won't overflow*/
+      height: 1200px; /* We need a fixed size so we know that the divs won't overflow*/
     }
 
     .gridcontainer div {
@@ -59,8 +59,8 @@
     }
 </style>
 
-<div hx-get="/dashboard/update" hx-target="#grid" hx-trigger="every 2s" hx-swap="morphdom"></div>
-
+<div hx-get="/dashboard/update" hx-target="#grid" hx-trigger="every 4s" hx-swap="morphdom"></div>
+<div id="drawer"></div>
 <div id="grid" class="gridmain">
         <form class="gridcontainer sortable" hx-post="/dashboard/update" hx-trigger="end">
         {% for card in cards %}
@@ -69,27 +69,27 @@
                 <i class="fa-regular fa-2xl fa-plus"></i><br>         
             </div>
         {% elif card.cardtype == 'ambition' %}
-            <div class="hexagon" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-target="#drawer" hx-get="/dashboard/opencard/{{ card.id }}" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-solid fa-xl fa-eye"></i><br>
                 {{ card.title}}
             </div>
         {% elif card.cardtype == 'challenge' %}E6799D
-            <div class="hexagon" style="background: #E6799D;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-target="#drawer" hx-get="/dashboard/opencard/{{ card.id }}" style="background: #E6799D;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-xl fa-mountain"></i><br>
                 {{ card.title}}
             </div>
         {% elif card.cardtype == 'idea' %}
-            <div class="hexagon" style="background: #51c1ff;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon"  hx-target="#drawer" hx-get="/dashboard/opencard/{{ card.id }}" style="background: #51c1ff;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-lightbulb fa-xl"></i><br>
                 {{ card.title}}
             </div>
         {% elif card.cardtype == 'pro' %}
-            <div class="hexagon" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon"  hx-target="#drawer" hx-get="/dashboard/opencard/{{ card.id }}" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-lightbulb fa-xl"></i><br>
                 {{ card.title}}
             </div>
             {% elif card.cardtype == 'con' %}
-            <div class="hexagon" style="background: red;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-target="#drawer" hx-get="/dashboard/opencard/{{ card.id }}" style="background: red;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <i class="fa-regular fa-lightbulb fa-xl"></i><br>
                 {{ card.title}}
             </div>
