added flexible URL's

--- a/src/dashboard/templates/drawer.html
+++ b/src/dashboard/templates/drawer.html
@@ -33,14 +33,36 @@
             <li class="py-3 sm:py-4">
                 <div class="flex items-center space-x-4">
                     <div class="flex-shrink-0">
-                        <img class="w-8 h-8 rounded-full" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/800px-YouTube_full-color_icon_%282017%29.svg.png" alt="Lana image">
+                        <img class="w-8 h-8 rounded-full" src="https://t2.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://youtube.com/&size=64" alt="Lana image">
                     </div>
                     <div class="flex-1 min-w-0">
                         <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                            Video Misstanden in Stallen
+                            Tesla Battery Production
                         </p>
                         <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                             https://youtube.com/somelink
+                        </p>
+                    </div>
+                    <div class="inline-flex items-center text-base text-gray-900 dark:text-white">
+                        {{ author }} 
+                        <div class="flex-shrink-0">
+                            <img class="w-8 h-8 rounded-full" src="https://gravatar.com/avatar/fd7bf2008ccec89b1578988fe50d09bc?s=400&d=robohash&r=x" alt="Lana image">
+                        </div>
+    
+                    </div>
+                </div>
+            </li>
+            <li class="py-3 sm:py-4">
+                <div class="flex items-center space-x-4">
+                    <div class="flex-shrink-0">
+                        <img class="w-8 h-8 rounded-full" src="https://t2.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://wikipedia.com/&size=64" alt="Lana image">
+                    </div>
+                    <div class="flex-1 min-w-0">
+                        <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                            Lithium Ion batteries
+                        </p>
+                        <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                            https://en.wikipedia.org/wiki/Lithium-ion_battery
                         </p>
                     </div>
                     <div class="inline-flex items-center text-base text-gray-900 dark:text-white">
