added card creation on doubleclick

--- a/src/dashboard/templates/grid.html
+++ b/src/dashboard/templates/grid.html
@@ -61,11 +61,12 @@
 
 <div hx-get="/dashboard/update" hx-target="#grid" hx-trigger="every 4s" hx-swap="morphdom"></div>
 <div id="drawer"></div>
+<div id="modal"></div>
 <div id="grid" class="gridmain">
         <form class="gridcontainer sortable" hx-post="/dashboard/update" hx-trigger="end">
         {% for card in cards %}
         {% if card.cardtype == 'empty' %}
-            <div class="hexagonhidden"><input type='hidden' name='item' value='{{ card.id}}'/>   
+            <div class="hexagonhidden" hx-get="/dashboard/editcard/{{ card.id }}" hx-trigger="dblclick" hx-target="#modal"><input type='hidden' name='item' value='{{ card.id}}'/>   
                 <i class="fa-regular fa-2xl fa-plus"></i><br>         
             </div>
         {% elif card.cardtype == 'ambition' %}
