--- a/src/dashboard/templates/drawer.html
+++ b/src/dashboard/templates/drawer.html
@@ -6,11 +6,9 @@
         <img class="rounded-t-lg" src="https://picsum.photos/600/300" alt="" />
     </a>
     <div class="p-5">
-        <div hx-target="this" hx-swap="outerHTML">
-            <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ title }} - {{ id }}</h1>
-            <button hx-get="/dashboard/editcard/{{ id }}" class="btn btn-primary">
-                Edit
-                </button>
+        <div hx-target="this" hx-swap="outerHTML" class="justify-between">
+            <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ title }}</h1>
+            <button hx-get="/dashboard/card/{{ id }}/edit/title" class="px-3 py-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit title</button>
         </div>
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Followers</h5>
      
@@ -25,8 +23,11 @@
             <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
         </a>
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Description</h5>
-
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ description }}</p>
+        <div hx-target="this" hx-swap="outerHTML">
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ description }}</p>
+                <button hx-get="/dashboard/card/{{ id }}/edit/description" class=class="px-3 py-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit description</button>
+        </div>
+        </div>
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Resources</h5>
 
             
