--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -42,8 +42,26 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
 
 </head>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function() {
+        // messages timeout for 10 sec
+        setTimeout(function() {
+            $('.messages').fadeOut('slow');
+        }, 5000); // <-- time in milliseconds, 1000 =  1 sec
+    });
+</script>
 <body class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
-
+	{% if messages %}
+	<ul class="messages">
+		{% for message in messages %}
+		<div class="p-4 mb-4 text-sm text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert">
+			<span class="font-medium">Info alert!</span> {{ message }}
+		  </div>
+		{% endfor %}
+	</ul>
+	{% endif %}
+	
 
 <!--Nav-->	
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
