--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -1,17 +1,16 @@
 
 <!--  left-0 z-40 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-80 dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-label"> -->
 
-<div class="overflow-y-auto h-screen m-4 p-4 fixed top-0 right-0 z-40 max-w-xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+<div id='drawer' class="overflow-y-auto h-screen m-4 p-4 fixed top-0 right-0 z-40 max-w-xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+    <button type="button" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">X</button>
+
     <a href="#">
         <img class="rounded-t-lg" src="https://picsum.photos/600/300" alt="" />
     </a>
     <div class="p-5">
-        <div hx-target="this" hx-swap="outerHTML" class="justify-between">
-            <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ title }}</h1>
-            <button hx-get="/card/{{ id }}/edit/title" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit title</button>
-        </div>
+        {% include "new_title.html" %}
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Followers</h5>
-     
+
 
         <div class="flex -space-x-1 overflow-hidden p-4">
             {% for follower in followers %}
@@ -20,14 +19,13 @@
             {% endfor %}
         </div> 
         <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">Following a card ensures you'll receive a notification when a comment or resource is added.</p>
- 
-        <button hx-get="/card/{{ id }}/like" class="px-3 py-2 my-2  text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Follow card</button>
+
+        {% include "notliked.html" with id=id %}
+        
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Description</h5>
-        <div hx-target="this" hx-swap="outerHTML">
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ description }}</p>
-                <button hx-get="/card/{{ id }}/edit/description" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit description</button>
+            {% include "new_description.html" %}
         </div>
-        </div>
+        
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Resources</h5>
 
             
@@ -85,6 +83,8 @@
    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Updates</h5>
 
    {% include 'commentsection.html' with comment=followers %}
-   
+   <button type="button" hx-get="/card/{{id}}/delete" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete Card</button>
+
     </div>
+    
 </div>
