remove card fixed

--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -86,7 +86,7 @@
    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Updates</h5>
 
    {% include 'commentsection.html' with comment=followers %}
-   <button type="button" hx-get="/card/{{id}}/delete" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete Card</button>
+   <button type="button" hx-get="/card/{{id}}/delete"  hx-target="#drawer" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete Card</button>
 
     </div>
     
